Added HTML code
Added all necessary HTML. Have to pull down on Wyvern

--- a/learn/simple/index.html
+++ b/learn/simple/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
 <html>
 
     <head>
-        <title> 1st Website </title>
-    </head>
-    
+        <title> MY 1st WEBSITE </title> 
+    </head> 
+
     <frameset rows="250,*" frameborder="0" border="0" framespacing="0">
         <frame src="index-top-menu.htm" border="0" name="MENU">
         <frame src="index-body.htm" border="0" name="BOT">
-    </framset>
-    
+    </frameset>
+
 </html>
